--- a/02_jotto/package.json
+++ b/02_jotto/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
+    "check-prop-types": "^1.1.2",
     "enzyme": "^3.11.0"
   }
 }
