--- a/02_jotto/package.json
+++ b/02_jotto/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "check-prop-types": "^1.1.2",
-    "enzyme": "^3.11.0"
+    "enzyme": "^3.11.0",
+    "moxios": "^0.4.0"
   }
 }
